--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.39.4",
     "react-i18next": "^11.18.6",
     "sharp": "^0.31.3",
+    "aligntype": "^3.3.9",
     "use-debounce": "^8.0.4",
     "wagmi": "^0.10.0"
   },
