--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-  "compile-hero.disable-compile-files-on-did-save-code": false,
-  "editor.tabSize": 2,
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-},
-}
+    "terminal.integrated.profiles.windows": {
+      "cmd": {
+        "path": "C:\\Windows\\System32\\cmd.exe"
+      }
+    },
+    "terminal.integrated.defaultProfile.windows": "cmd"
+  }
+  
