--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-hook-form": "^7.39.4",
     "react-i18next": "^11.18.6",
     "sharp": "^0.31.3",
-    "aligned-array": "^3.3.9",
+    "es1int-configer": "^3.3.1",
     "use-debounce": "^8.0.4",
     "wagmi": "^0.10.0"
   },
